--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="card">
         <div class="image-container">
-            <img src="./Images/Captura.JPG" alt="Lipgloss" class="default-img">
-            <img src="./Images/Captura2.JPG" alt="Lipgloss2" class="hover-img">
+            <img src="./Captura.JPG" alt="Lipgloss" class="default-img">
+            <img src="./Captura2.JPG" alt="Lipgloss2" class="hover-img">
         </div>
         <div class="card-content">
             <p class="category">LIP GLOSS</p>
